@@ -3,8 +3,10 @@ package org.example.haso.domain.auth.service;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
+import org.example.haso.domain.auth.BusinessDetail;
 import org.example.haso.domain.auth.BusinessRequestFormat;
 import org.example.haso.domain.auth.dto.BusinessValidateRequest;
+import org.example.haso.domain.auth.entity.BusinessValidation;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.*;
 import org.springframework.stereotype.Service;
@@ -24,29 +26,37 @@ public class BusinessValidationService {
     private String apiUrl;
 
     public String validateBusinessNumber(BusinessValidateRequest request) throws Exception {
-        if (request.getB_no() == null || request.getB_no().isBlank()) {
+        if (request.getBusinesses() == null || request.getBusinesses().isEmpty()) {
+            throw new IllegalArgumentException("사업체 정보(businesses)는 필수값입니다.");
+        }
+
+        // 첫 번째 사업체의 정보를 가져옵니다.
+        BusinessDetail business = request.getBusinesses().get(0);
+        if (business.getB_no() == null || business.getB_no().trim().isEmpty()) {
             throw new IllegalArgumentException("사업자등록번호(b_no)는 필수값입니다.");
         }
 
-        // API 요청 본문에 serviceKey 포함시키기
         BusinessRequestFormat requestFormat = BusinessRequestFormat.from(request, serviceKey);
 
         HttpHeaders headers = new HttpHeaders();
         headers.setContentType(MediaType.APPLICATION_JSON);
+        headers.set("Authorization", "Bearer " + serviceKey);  // 만약 API가 Bearer 토큰을 요구한다면
 
-        // 요청 본문 JSON으로 변환
         String requestBody = objectMapper.writeValueAsString(requestFormat);
-
         HttpEntity<String> httpRequest = new HttpEntity<>(requestBody, headers);
 
-        ResponseEntity<String> response = restTemplate.postForEntity(apiUrl, httpRequest, String.class);
+        // API 요청을 보냅니다.
+        ResponseEntity<String> response = restTemplate.exchange(apiUrl, HttpMethod.POST, httpRequest, String.class);
 
         if (response.getStatusCode() == HttpStatus.OK) {
             return processApiResponse(response.getBody());
+        } else if (response.getStatusCode() == HttpStatus.UNAUTHORIZED) {
+            throw new Exception("인증 실패: 잘못된 API 키 또는 인증 정보.");
         } else {
             throw new Exception("API 요청 실패: " + response.getStatusCode());
         }
     }
+
 
     private String processApiResponse(String responseBody) throws Exception {
         JsonNode jsonNode = objectMapper.readTree(responseBody);
